skeplib/tests/fixtures/parser/invalid/missing_expr.sk
fn main() -> Int {
  let x = ;
  return 0;
}
